language/move-lang/tests/move_check/translated_ir_tests/commands/return_type_mismatch_and_unused_resource.move
module M {
    resource struct X {}

    fun t1(): bool {
        let x = X {};
        &x;
        false
    }

    fun t2(): &u64 {
        let u = 0;
        let r = &u;
        r
    }
}

// check: RET_UNSAFE_TO_DESTROY_ERROR
// check: RET_UNSAFE_TO_DESTROY_ERROR
